--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_bloc: ^0.14.0
+  equatable: ^0.2.0
 
 
 # For information on the generic Dart part of this file, see the
