--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^0.1.2
   http: "^0.11.3+16"
+  flutter_svg: "0.12.0"
 
 dev_dependencies:
   flutter_test:
